--- a/build.yaml
+++ b/build.yaml
@@ -14,6 +14,6 @@
 ---
 include:
   - board: nice_nano
-    shield: taira_left
+    shield: tiara_left
   - board: nice_nano
-    shield: taira_right
+    shield: tiara_right
