Revert "rename from tiara to tiara"
This reverts commit f389110bb398a6853f6a7799b219ec0f0d78eeff.

--- a/config/boards/shields/taira/taira.zmk.yml
+++ b/config/boards/shields/taira/taira.zmk.yml
@@ -1,6 +1,6 @@
 file_format: "1"
 id: tiara
-name: tiara
+name: Tiara
 type: shield
 url: https://github.com/strayer/tiarakb/
 requires: [pro_micro]
